--- a/log_output/package.json
+++ b/log_output/package.json
@@ -10,6 +10,7 @@
     "@eslint/js": "^9.28.0",
     "@stylistic/eslint-plugin": "^4.4.1",
     "@types/eslint__js": "^8.42.3",
+    "@types/express": "^5.0.2",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.28.0",
     "ts-node-dev": "^2.0.0",
@@ -17,6 +18,8 @@
     "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "uuid": "^11.1.0"
   }
 }
