--- a/log_output/manifests/deployment.yaml
+++ b/log_output/manifests/deployment.yaml
@@ -12,6 +12,17 @@ spec:
       labels:
         app: log-output
     spec:
+      volumes: # Define volume
+        - name: shared-log-output
+          emptyDir: {}
       containers:
-        - name: log-output
-          image: tniemi/dwk-log-output:1.7
+        - name: log-output-generator
+          image: tniemi/dwk-log-output-generator:1.10
+          volumeMounts:
+            - name: shared-log-output
+              mountPath: /app/files
+        - name: log-output-server
+          image: tniemi/dwk-log-output-server:1.10
+          volumeMounts:
+            - name: shared-log-output
+              mountPath: /app/files
