--- a/ping_pong/manifests/deployment.yaml
+++ b/ping_pong/manifests/deployment.yaml
@@ -12,6 +12,13 @@ spec:
       labels:
         app: ping-pong
     spec:
+      volumes:
+        - name: shared-ping-pong-output
+          persistentVolumeClaim:
+            claimName: ping-pong-claim
       containers:
         - name: ping-pong
-          image: tniemi/dwk-ping-pong:1.9
+          image: tniemi/dwk-ping-pong:1.11
+          volumeMounts:
+            - name: shared-ping-pong-output
+              mountPath: /app/files
