--- a/todo_app/Dockerfile
+++ b/todo_app/Dockerfile
@@ -2,6 +2,7 @@ FROM node:24 AS build-stage
 WORKDIR /build
 COPY . .
 RUN npm run tsc
+RUN npm --prefix frontend run build
 
 FROM node:24-alpine
 USER node
@@ -9,5 +10,7 @@ WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=build-stage /build/build .
 COPY --from=build-stage /build/package*.json .
+COPY --from=build-stage /build/frontend/dist dist
+RUN mkdir files
 RUN npm ci
 CMD ["index.js"]
