--- a/manifests/persistentVolumeClaims.yaml
+++ b/manifests/persistentVolumeClaims.yaml
@@ -9,3 +9,15 @@ spec:
   resources:
     requests:
       storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: todo-app-claim # name of the volume claim, this will be used in the deployment
+spec:
+  storageClassName: todo-app-sc # this is the name of the persistent volume we are claiming
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Mi
