--- a/manifests/persistentVolumes.yaml
+++ b/manifests/persistentVolumes.yaml
@@ -19,3 +19,25 @@ spec:
           operator: In
           values:
           - k3d-k3s-default-agent-0
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: todo-app-pv
+spec:
+  storageClassName: todo-app-sc # this is the name you are using later to claim this volume
+  capacity:
+    storage: 10Mi
+  volumeMode: Filesystem # This declares that it will be mounted into pods as a directory
+  accessModes:
+  - ReadWriteOnce
+  local:
+    path: /tmp/todo
+  nodeAffinity: ## This is only required for local, it defines which nodes can access it
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - k3d-k3s-default-agent-0
