--- a/todo_app/package.json
+++ b/todo_app/package.json
@@ -18,6 +18,7 @@
     "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "uuid": "^11.1.0"
