--- a/ping_pong/manifests/deployment.yaml
+++ b/ping_pong/manifests/deployment.yaml
@@ -13,12 +13,12 @@ spec:
         app: ping-pong
     spec:
       volumes:
-        - name: shared-ping-pong-output
-          persistentVolumeClaim:
-            claimName: ping-pong-claim
+#        - name: shared-ping-pong-output
+#          persistentVolumeClaim:
+#            claimName: ping-pong-claim
       containers:
         - name: ping-pong
-          image: tniemi/dwk-ping-pong:1.11
-          volumeMounts:
-            - name: shared-ping-pong-output
-              mountPath: /app/files
+          image: tniemi/dwk-ping-pong:2.1
+#          volumeMounts:
+#            - name: shared-ping-pong-output
+#              mountPath: /app/files
