--- a/todo_app/manifests/service.yaml
+++ b/todo_app/manifests/service.yaml
@@ -10,3 +10,16 @@ spec:
     - port: 2345
       protocol: TCP
       targetPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: todo-backend-svc
+spec:
+  type: ClusterIP
+  selector:
+    app:  todo-backend
+  ports:
+    - port: 2345
+      protocol: TCP
+      targetPort: 3000
