--- a/manifests/persistentVolumeClaims.yaml
+++ b/manifests/persistentVolumeClaims.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ping-pong-claim # name of the volume claim, this will be used in the deployment
+  namespace: exercises
 spec:
   storageClassName: ping-pong-sc # this is the name of the persistent volume we are claiming
   accessModes:
@@ -14,6 +15,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: todo-app-claim # name of the volume claim, this will be used in the deployment
+  namespace: default
 spec:
   storageClassName: todo-app-sc # this is the name of the persistent volume we are claiming
   accessModes:
