--- a/manifests/persistentVolumes.yaml
+++ b/manifests/persistentVolumes.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: ping-pong-pv
+  namespace: exercises
 spec:
   storageClassName: ping-pong-sc # this is the name you are using later to claim this volume
   capacity:
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: todo-app-pv
+  namespace: default
 spec:
   storageClassName: todo-app-sc # this is the name you are using later to claim this volume
   capacity:
