--- a/ping_pong/manifests/deployment.yaml
+++ b/ping_pong/manifests/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ping-pong-dep
+  namespace: exercises
 spec:
   replicas: 1
   selector:
@@ -12,7 +13,7 @@ spec:
       labels:
         app: ping-pong
     spec:
-      volumes:
+#      volumes:
 #        - name: shared-ping-pong-output
 #          persistentVolumeClaim:
 #            claimName: ping-pong-claim
