--- a/ping_pong/manifests/ingress.yaml
+++ b/ping_pong/manifests/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: dwk-ingress
+  namespace: exercises
   annotations:
     traefik.ingress.kubernetes.io/router.middlewares: default-mw-strip@kubernetescrd
 spec:
