--- a/manifests/persistentVolumeClaims.yaml
+++ b/manifests/persistentVolumeClaims.yaml
@@ -15,7 +15,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: todo-app-claim # name of the volume claim, this will be used in the deployment
-  namespace: default
+  namespace: project
 spec:
   storageClassName: todo-app-sc # this is the name of the persistent volume we are claiming
   accessModes:
