--- a/manifests/persistentVolumes.yaml
+++ b/manifests/persistentVolumes.yaml
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: todo-app-pv
-  namespace: default
+  namespace: project
 spec:
   storageClassName: todo-app-sc # this is the name you are using later to claim this volume
   capacity:
