--- a/todo_app/manifests/deployment.yaml
+++ b/todo_app/manifests/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-app-dep
+  namespace: project
 spec:
   replicas: 1
   selector:
@@ -27,6 +28,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-backend-dep
+  namespace: project
 spec:
   replicas: 1
   selector:
