--- a/todo_app/manifests/service.yaml
+++ b/todo_app/manifests/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-app-svc
+  namespace: project
 spec:
   type: ClusterIP
   selector:
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-backend-svc
+  namespace: project
 spec:
   type: ClusterIP
   selector:
