--- a/todo_app/manifests/deployment.yaml
+++ b/todo_app/manifests/deployment.yaml
@@ -19,7 +19,12 @@ spec:
             claimName: todo-app-claim
       containers:
         - name: todo-app
-          image: tniemi/dwk-todo-app:2.2
+          image: tniemi/dwk-todo-app:2.6
+          env:
+          - name: PORT
+            value: "3000"
+          - name: PIC_URL
+            value: "https://picsum.photos/1200"
           volumeMounts:
             - name: todo-app-output
               mountPath: /app/files
@@ -42,3 +47,6 @@ spec:
       containers:
         - name: todo-backend
           image: tniemi/dwk-todo-backend:2.2
+          env:
+          - name: PORT
+            value: "3000"
