--- a/ping_pong/package.json
+++ b/ping_pong/package.json
@@ -11,6 +11,7 @@
     "@stylistic/eslint-plugin": "^4.4.1",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.2",
+    "@types/pg": "^8.15.4",
     "eslint": "^9.28.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.16.0"
   }
 }
